--- a/PeeApp/app/src/main/res/layout/activity_main.xml
+++ b/PeeApp/app/src/main/res/layout/activity_main.xml
@@ -22,12 +22,13 @@
         android:layout_width="219dp"
         android:layout_height="91dp"
         android:background="@android:color/holo_orange_light"
+        android:elevation="12dp"
         android:text="I PEED!"
-        tools:layout_editor_absoluteY="83dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteY="83dp" />
 
 </android.support.constraint.ConstraintLayout>
